# windows_firewall_automation

./: Cargo.toml  Makefile  autorun.bat  windows.ps1
rules/: tcp_inbound_allow.json
src/: fw_struct.rs  main.rs  mod.rs
